<resources>
    <string name="app_name">BiblioMania</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">Bibliomania</string>
    <string name="username">Gebruikersnaam</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="generic_error">Er ging iets mis. Sorry...</string>
    <string name="password">Paswoord</string>
    <string name="login">log in</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books_downloaded">Boeken gedownload</string>
    <string name="downloading">Boeken aan het downloaden</string>
    <string name="logging_in">Inloggen</string>
    <string name="download_books">Download boeken</string>
    <string name="books">Boeken</string>
    <string name="author">Auteur</string>
    <string name="publisher">Uitgever</string>
    <string name="book_title">Titel</string>
    <string name="search_book_hint">Zoek boek...</string>
    <string name="title_activity_book_info">BookInfoActivity</string>
    <string name="general_book_info_title">Boek info</string>
    <string name="book_info_title">Boek informatie</string>
    <string name="author_info_title">Auteur informatie</string>
    <string name="book_subtitle">Ondertitel</string>
    <string name="download_books_progress_message">Boeken worden gedownload en opgeslagen. Even geduld...</string>
    <string name="book_author">Auteur</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_publisher">Uitgever</string>
    <string name="download_confirmation_title">Bent u zeker?</string>
    <string name="download_confirmation_message">Dit zal alle boeken en afbeeldingen terug downloaden. Dit is veel data en kan lang duren. Niet aangeraden als je op een mobiel netwerk zit.</string>
    <string name="author_name">Naam</string>
    <string name="author_date_of_birth">Date of birth</string>
    <string name="author_date_of_death">Date of death</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="logout_confirmation_title">Log out?</string>
    <string name="logout_confirmation_message">Ben je zeker dat je wilt afmelden?</string>
    <string name="drawer_header_title">Bibliomania</string>
    <string name="review">Review</string>
</resources>
