<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bendani.bibliomania.bookinfo.GeneralBookInfoFragment">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:layout_marginTop="20dp"
            android:id="@+id/book_info_title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:textText="some title"
            app:hintText="@string/book_title"/>

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:id="@+id/book_info_subtitle_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:textText="subtitle"
            app:hintText="@string/book_subtitle"/>

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:id="@+id/book_info_author_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:textText="subtitle"
            app:hintText="@string/book_author"/>

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:id="@+id/book_info_isbn_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:textText="subtitle"
            app:hintText="@string/book_isbn"/>
    </LinearLayout>


</RelativeLayout>
