<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_color"
    tools:context="com.bendani.bibliomania.login.LoginFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/primary_color"
            android:textSize="50dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/username"
            app:textCapSentences="false"
        />

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelEditText
            android:layout_marginTop="20dp"
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/password"
            app:textCapSentences="false"
            app:inputType="password"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/accent_color"
            android:background="@color/primary_color"
            />
    </LinearLayout>
</FrameLayout>
