<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bendani.bibliomania.books.presentation.BooksFragment">

    <TableLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:shrinkColumns="1"
        android:background="@color/primary_dark_color"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="90dp"
                android:gravity="center"
                android:text="@string/book_title"
                android:textColor="@color/accent_color" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/author"
                android:textColor="@color/accent_color" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/publisher"
                android:textColor="@color/accent_color" />
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/header"
        android:id="@+id/book_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
