<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.bendani.bibliomania.bookinfo.GeneralBookInfoFragment">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/author_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:layout_marginTop="20dp"
            android:id="@+id/author_info_name_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:textText="some title"
            app:hintText="@string/author_name"/>
        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:layout_marginTop="20dp"
            android:id="@+id/author_info_date_of_birth_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:textText=""
            app:hintText="@string/author_date_of_birth"/>
        <com.bendani.bibliomania.generic.presentation.customview.FloatingLabelTextview
            android:layout_marginTop="20dp"
            android:id="@+id/author_info_date_of_death_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:textText=""
            app:hintText="@string/author_date_of_death"/>

    </LinearLayout>
</RelativeLayout>